syntax = "proto3";

package package_remark_record;

import "google/protobuf/empty.proto";

service PackageRemarkRecordController {
    rpc List(PackageRemarkRecordListRequest) returns (stream PackageRemarkRecord) {}
    rpc Create(PackageRemarkRecord) returns (PackageRemarkRecord) {}
    rpc Retrieve(PackageRemarkRecordRetrieveRequest) returns (PackageRemarkRecord) {}
    rpc Update(PackageRemarkRecord) returns (PackageRemarkRecord) {}
    rpc Destroy(PackageRemarkRecord) returns (google.protobuf.Empty) {}
}

message PackageRemarkRecord {
    int64 id = 1;
    string record_type = 2;
    string description = 3;
    string reference = 4;
    string created_at = 5;
    int64 package = 6;
    int32 created_by = 7;
}

message PackageRemarkRecordListRequest {
}

message PackageRemarkRecordRetrieveRequest {
    int64 id = 1;
}
